...
                    Navigator.pop(context);
                    widget.onHide!();
                  },
                ),
              if (widget.onArchive != null)
                CupertinoActionSheetAction(
                  child: const Text('Archive'),
                  onPressed: () {
                    Navigator.pop(context);
                    widget.onArchive!();
                  },
                ),
              if (widget.onDelete != null)
...
            ],
            cancelButton: CupertinoActionSheetAction(
              isDefaultAction: true,
              onPressed: () {
                Navigator.pop(context);
              },
              child: const Text('Cancel'),
            ),
          ),
    );
  }

  @override
...
